--- a/src/routes/index.module.css
+++ b/src/routes/index.module.css
@@ -22,6 +22,7 @@
     [breakout-end breakout-left-end]
     minmax(var(--macro-grid-padding-inline), 1fr)
     [full-width-end breakout-right-end];
+  row-gap: 2rem;
   padding-block: 1rem 1rem;
 
   @media (width >= 768px) {
@@ -33,6 +34,7 @@
   @media (width >= 1024px) {
     --macro-grid-padding-inline: 2rem;
 
+    row-gap: 3rem;
     padding-block: 3rem 5rem;
   }
 }
